# tokadapt

./: .eslintignore  .gitignore  Anchor.toml  README.md  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
patches/: @solana+spl-token+0.1.8.patch
programs/tokadapt/: Cargo.toml
programs/tokadapt/src/: lib.rs
tests/: tokadapt.ts
