[package]
name = "tokadapt"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "tokadapt"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
vipers = "1.0.0"
anchor-lang = "0.16.1"
anchor-spl = "0.16.1"
